支持导入物料组，物料。导入物料还有异常